--- a/README
+++ b/README
@@ -2,11 +2,13 @@
 Chapel Compiler Release: top-level README
 =========================================
 
-This is a preliminary release of the Chapel compiler, intended for use
-by a small audience for evaluation and feedback purposes.  See the
-LICENSE file for information about legal usage, and please also keep
-in mind the user agreement that you have made regarding this release,
-available for your reference in the AGREEMENT file.
+This is the first public release of the Chapel compiler, intended to
+give potential users a look at what we're doing and the opportunity to
+provide us with feedback.  See the AGREEMENT file for the release's
+user agreement and the LICENSE file for its licensing terms.  Source
+code contained within the third-party directory may contain its own
+licenses -- see third-party/README for details.
+
 
 
 -----------
